--- a/ChuckNorrisJokes/Base.lproj/Main.storyboard
+++ b/ChuckNorrisJokes/Base.lproj/Main.storyboard
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="6Db-hL-4cg">
+    <device id="retina5_9" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -9,16 +13,171 @@
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="ChuckNorrisJokes" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Chuck Norris Joke's" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2dn-CC-tTz">
+                                <rect key="frame" x="60" y="123" width="255" height="51"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="51" id="so2-FC-dWY"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="26"/>
+                                <color key="textColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="theatre-masks_318-1606.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="NY2-1w-JyZ">
+                                <rect key="frame" x="38" y="234" width="299" height="189"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="189" id="31l-zM-ZlV"/>
+                                </constraints>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BCT-zX-ak4">
+                                <rect key="frame" x="30" y="701" width="315" height="44"/>
+                                <color key="backgroundColor" red="0.0" green="0.32852089410000002" blue="0.57488495110000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="26"/>
+                                <state key="normal" title="Login With Facebook">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    <color key="titleShadowColor" red="0.43529412150000002" green="0.4431372583" blue="0.47450980539999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </state>
+                                <connections>
+                                    <action selector="fbBtn:" destination="BYZ-38-t0r" eventType="touchUpInside" id="5F8-Ix-rQe"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="NY2-1w-JyZ" secondAttribute="trailing" constant="38" id="4HJ-CJ-MQ1"/>
+                            <constraint firstItem="BCT-zX-ak4" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="30" id="9PA-ZT-g8Z"/>
+                            <constraint firstItem="NY2-1w-JyZ" firstAttribute="top" secondItem="2dn-CC-tTz" secondAttribute="bottom" constant="60" id="DSS-Bk-shU"/>
+                            <constraint firstItem="2dn-CC-tTz" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="35" id="KGz-1S-A4q"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="BCT-zX-ak4" secondAttribute="trailing" constant="30" id="PpV-mn-j2g"/>
+                            <constraint firstItem="2dn-CC-tTz" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="60" id="bvb-0d-W4v"/>
+                            <constraint firstItem="NY2-1w-JyZ" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="38" id="gf6-EB-dyS"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="2dn-CC-tTz" secondAttribute="trailing" constant="60" id="hUX-H1-WRP"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="BCT-zX-ak4" secondAttribute="bottom" constant="33" id="xgx-C3-eIG"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <navigationItem key="navigationItem" id="asT-yf-M81"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="957.60000000000002" y="760.34482758620697"/>
+        </scene>
+        <!--Home View Controller-->
+        <scene sceneID="6Dz-7a-2Td">
+            <objects>
+                <viewController storyboardIdentifier="HomeViewController" id="jsl-VT-w2K" customClass="HomeViewController" customModule="ChuckNorrisJokes" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="ZUc-C4-n2E">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="R0x-MI-t3U">
+                                <rect key="frame" x="0.0" y="44" width="375" height="734"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="ehg-pd-kk7">
+                                    <size key="itemSize" width="170" height="170"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="yW7-fT-ln7">
+                                        <rect key="frame" x="0.0" y="0.0" width="170" height="170"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
+                                            <rect key="frame" x="0.0" y="0.0" width="170" height="170"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="animal-png-hd-for-kids-stickers-for-kids-jungle-animals-500" translatesAutoresizingMaskIntoConstraints="NO" id="DF0-SQ-a2m">
+                                                    <rect key="frame" x="1" y="1" width="168" height="168"/>
+                                                </imageView>
+                                                <visualEffectView opaque="NO" alpha="0.40000000000000002" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="fIG-Mc-hsk">
+                                                    <rect key="frame" x="1" y="1" width="168" height="168"/>
+                                                    <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="VTb-wO-InL">
+                                                        <rect key="frame" x="0.0" y="0.0" width="168" height="168"/>
+                                                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                                        <subviews>
+                                                            <visualEffectView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="3wh-fu-0wL">
+                                                                <rect key="frame" x="0.0" y="0.0" width="168" height="168"/>
+                                                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" ambiguous="YES" insetsLayoutMarginsFromSafeArea="NO" id="37s-DN-8gv">
+                                                                    <rect key="frame" x="0.0" y="0.0" width="168" height="168"/>
+                                                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                                                </view>
+                                                                <vibrancyEffect>
+                                                                    <blurEffect style="light"/>
+                                                                </vibrancyEffect>
+                                                            </visualEffectView>
+                                                        </subviews>
+                                                    </view>
+                                                    <blurEffect style="prominent"/>
+                                                </visualEffectView>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2O1-ir-2eI">
+                                                    <rect key="frame" x="1" y="1" width="168" height="168"/>
+                                                    <fontDescription key="fontDescription" style="UICTFontTextStyleTitle0"/>
+                                                    <state key="normal" title="Animals">
+                                                        <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                    </state>
+                                                </button>
+                                            </subviews>
+                                        </view>
+                                        <constraints>
+                                            <constraint firstAttribute="trailing" secondItem="2O1-ir-2eI" secondAttribute="trailing" constant="1" id="1Eh-5W-DYb"/>
+                                            <constraint firstAttribute="trailing" secondItem="fIG-Mc-hsk" secondAttribute="trailing" constant="1" id="2Jp-Uw-Ylf"/>
+                                            <constraint firstItem="DF0-SQ-a2m" firstAttribute="leading" secondItem="yW7-fT-ln7" secondAttribute="leading" constant="1" id="2ng-Lu-apW"/>
+                                            <constraint firstAttribute="trailing" secondItem="DF0-SQ-a2m" secondAttribute="trailing" constant="1" id="9JN-d4-DEL"/>
+                                            <constraint firstAttribute="bottom" secondItem="2O1-ir-2eI" secondAttribute="bottom" constant="1" id="DDr-Kr-RT4"/>
+                                            <constraint firstItem="DF0-SQ-a2m" firstAttribute="top" secondItem="yW7-fT-ln7" secondAttribute="top" constant="1" id="JdF-OE-qhL"/>
+                                            <constraint firstItem="2O1-ir-2eI" firstAttribute="top" secondItem="yW7-fT-ln7" secondAttribute="top" constant="1" id="Ply-cw-HB6"/>
+                                            <constraint firstAttribute="bottom" secondItem="fIG-Mc-hsk" secondAttribute="bottom" constant="1" id="ays-5c-nG3"/>
+                                            <constraint firstItem="fIG-Mc-hsk" firstAttribute="top" secondItem="yW7-fT-ln7" secondAttribute="top" constant="1" id="d30-tD-8YH"/>
+                                            <constraint firstItem="2O1-ir-2eI" firstAttribute="leading" secondItem="yW7-fT-ln7" secondAttribute="leading" constant="1" id="nK4-Sy-ArL"/>
+                                            <constraint firstAttribute="bottom" secondItem="DF0-SQ-a2m" secondAttribute="bottom" constant="1" id="wux-pX-6nE"/>
+                                            <constraint firstItem="fIG-Mc-hsk" firstAttribute="leading" secondItem="yW7-fT-ln7" secondAttribute="leading" constant="1" id="zap-aH-UKe"/>
+                                        </constraints>
+                                        <size key="customSize" width="170" height="170"/>
+                                    </collectionViewCell>
+                                </cells>
+                            </collectionView>
+                        </subviews>
+                        <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="R0x-MI-t3U" firstAttribute="leading" secondItem="hN0-CM-owt" secondAttribute="leading" id="7gz-Xg-GT9"/>
+                            <constraint firstItem="R0x-MI-t3U" firstAttribute="top" secondItem="hN0-CM-owt" secondAttribute="top" id="jzw-Uo-u71"/>
+                            <constraint firstItem="hN0-CM-owt" firstAttribute="trailing" secondItem="R0x-MI-t3U" secondAttribute="trailing" id="lwS-fL-fXo"/>
+                            <constraint firstItem="hN0-CM-owt" firstAttribute="bottom" secondItem="R0x-MI-t3U" secondAttribute="bottom" id="u3i-QC-LG0"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="hN0-CM-owt"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="PTE-0v-0Qo" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1752.8" y="759.60591133004925"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="cer-hh-TEr">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="6Db-hL-4cg" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="4w8-4f-Yqz">
+                        <rect key="frame" x="0.0" y="44" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="gkN-0P-SKU"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="DQA-f6-Brb" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="166.66666666666669" y="761.38392857142856"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="animal-png-hd-for-kids-stickers-for-kids-jungle-animals-500" width="250" height="166.5"/>
+        <image name="theatre-masks_318-1606.jpg" width="626" height="626"/>
+    </resources>
 </document>
