--- a/Base.lproj/Main.storyboard
+++ b/Base.lproj/Main.storyboard
@@ -67,109 +67,53 @@
             <point key="canvasLocation" x="905" y="492"/>
         </scene>
         <!--View Controller-->
-        <scene sceneID="bQ6-HB-dek">
-            <objects>
-                <viewController id="nP5-sM-jrK" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="TYv-Cx-G7S">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <viewLayoutGuide key="safeArea" id="VnI-QK-fS5"/>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="hZS-kV-g0M" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="905" y="1187"/>
-        </scene>
-        <!--Home View Controller-->
         <scene sceneID="6Dz-7a-2Td">
             <objects>
-                <viewController storyboardIdentifier="HomeViewController" id="jsl-VT-w2K" customClass="HomeViewController" customModule="ChuckNorrisJokes" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="jsl-VT-w2K" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="ZUc-C4-n2E">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="R0x-MI-t3U">
-                                <rect key="frame" x="0.0" y="44" width="375" height="734"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="ehg-pd-kk7">
-                                    <size key="itemSize" width="170" height="170"/>
-                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
-                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
-                                </collectionViewFlowLayout>
-                                <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="yW7-fT-ln7">
-                                        <rect key="frame" x="0.0" y="0.0" width="170" height="170"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
-                                            <rect key="frame" x="0.0" y="0.0" width="170" height="170"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                            <subviews>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="animal-png-hd-for-kids-stickers-for-kids-jungle-animals-500" translatesAutoresizingMaskIntoConstraints="NO" id="DF0-SQ-a2m">
-                                                    <rect key="frame" x="1" y="1" width="168" height="168"/>
-                                                </imageView>
-                                                <visualEffectView opaque="NO" alpha="0.40000000000000002" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="fIG-Mc-hsk">
-                                                    <rect key="frame" x="1" y="1" width="168" height="168"/>
-                                                    <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="VTb-wO-InL">
-                                                        <rect key="frame" x="0.0" y="0.0" width="168" height="168"/>
-                                                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                                                        <subviews>
-                                                            <visualEffectView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="3wh-fu-0wL">
-                                                                <rect key="frame" x="0.0" y="0.0" width="168" height="168"/>
-                                                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                                                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" ambiguous="YES" insetsLayoutMarginsFromSafeArea="NO" id="37s-DN-8gv">
-                                                                    <rect key="frame" x="0.0" y="0.0" width="168" height="168"/>
-                                                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                                                                </view>
-                                                                <vibrancyEffect>
-                                                                    <blurEffect style="light"/>
-                                                                </vibrancyEffect>
-                                                            </visualEffectView>
-                                                        </subviews>
-                                                    </view>
-                                                    <blurEffect style="prominent"/>
-                                                </visualEffectView>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Animals" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ocf-97-m1A">
-                                                    <rect key="frame" x="1" y="1" width="168" height="168"/>
-                                                    <fontDescription key="fontDescription" name="GillSans-SemiBold" family="Gill Sans" pointSize="33"/>
-                                                    <nil key="textColor"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
-                                            </subviews>
-                                        </view>
-                                        <constraints>
-                                            <constraint firstAttribute="trailing" secondItem="fIG-Mc-hsk" secondAttribute="trailing" constant="1" id="2Jp-Uw-Ylf"/>
-                                            <constraint firstItem="DF0-SQ-a2m" firstAttribute="leading" secondItem="yW7-fT-ln7" secondAttribute="leading" constant="1" id="2ng-Lu-apW"/>
-                                            <constraint firstAttribute="trailing" secondItem="DF0-SQ-a2m" secondAttribute="trailing" constant="1" id="9JN-d4-DEL"/>
-                                            <constraint firstItem="ocf-97-m1A" firstAttribute="top" secondItem="yW7-fT-ln7" secondAttribute="top" constant="1" id="CUl-xq-2Mm"/>
-                                            <constraint firstItem="DF0-SQ-a2m" firstAttribute="top" secondItem="yW7-fT-ln7" secondAttribute="top" constant="1" id="JdF-OE-qhL"/>
-                                            <constraint firstAttribute="bottom" secondItem="ocf-97-m1A" secondAttribute="bottom" constant="1" id="Wqj-ru-0n8"/>
-                                            <constraint firstAttribute="bottom" secondItem="fIG-Mc-hsk" secondAttribute="bottom" constant="1" id="ays-5c-nG3"/>
-                                            <constraint firstItem="fIG-Mc-hsk" firstAttribute="top" secondItem="yW7-fT-ln7" secondAttribute="top" constant="1" id="d30-tD-8YH"/>
-                                            <constraint firstItem="ocf-97-m1A" firstAttribute="leading" secondItem="yW7-fT-ln7" secondAttribute="leading" constant="1" id="sbe-3P-XEP"/>
-                                            <constraint firstAttribute="bottom" secondItem="DF0-SQ-a2m" secondAttribute="bottom" constant="1" id="wux-pX-6nE"/>
-                                            <constraint firstItem="fIG-Mc-hsk" firstAttribute="leading" secondItem="yW7-fT-ln7" secondAttribute="leading" constant="1" id="zap-aH-UKe"/>
-                                            <constraint firstAttribute="trailing" secondItem="ocf-97-m1A" secondAttribute="trailing" constant="1" id="zs2-VJ-H3E"/>
-                                        </constraints>
-                                        <size key="customSize" width="170" height="170"/>
-                                    </collectionViewCell>
-                                </cells>
-                            </collectionView>
-                        </subviews>
                         <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <constraints>
-                            <constraint firstItem="R0x-MI-t3U" firstAttribute="leading" secondItem="hN0-CM-owt" secondAttribute="leading" id="7gz-Xg-GT9"/>
-                            <constraint firstItem="R0x-MI-t3U" firstAttribute="top" secondItem="hN0-CM-owt" secondAttribute="top" id="jzw-Uo-u71"/>
-                            <constraint firstItem="hN0-CM-owt" firstAttribute="trailing" secondItem="R0x-MI-t3U" secondAttribute="trailing" id="lwS-fL-fXo"/>
-                            <constraint firstItem="hN0-CM-owt" firstAttribute="bottom" secondItem="R0x-MI-t3U" secondAttribute="bottom" id="u3i-QC-LG0"/>
-                        </constraints>
                         <viewLayoutGuide key="safeArea" id="hN0-CM-owt"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="PTE-0v-0Qo" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1610" y="491"/>
+            <point key="canvasLocation" x="1253.5999999999999" y="1185.960591133005"/>
+        </scene>
+        <!--Home View Controller-->
+        <scene sceneID="fb2-Xc-BLZ">
+            <objects>
+                <collectionViewController storyboardIdentifier="HomeViewController" id="ZE5-HA-HwQ" customClass="HomeViewController" customModule="ChuckNorrisJokes" customModuleProvider="target" sceneMemberID="viewController">
+                    <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="99b-Oq-BSr">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="nXV-zm-nQE">
+                            <size key="itemSize" width="50" height="50"/>
+                            <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                            <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                            <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                        </collectionViewFlowLayout>
+                        <cells>
+                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="8CN-1q-p2r">
+                                <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
+                                    <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </view>
+                            </collectionViewCell>
+                        </cells>
+                        <connections>
+                            <outlet property="dataSource" destination="ZE5-HA-HwQ" id="wuV-AN-CnW"/>
+                            <outlet property="delegate" destination="ZE5-HA-HwQ" id="yBi-ln-VmQ"/>
+                        </connections>
+                    </collectionView>
+                </collectionViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="sOB-va-vYj" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1628" y="491"/>
         </scene>
         <!--Random Joke View Controller-->
         <scene sceneID="cDm-OY-b0t">
@@ -179,7 +123,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="animal-png-hd-for-kids-stickers-for-kids-jungle-animals-500" translatesAutoresizingMaskIntoConstraints="NO" id="Iq8-c8-fmt">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="animals" translatesAutoresizingMaskIntoConstraints="NO" id="Iq8-c8-fmt">
                                 <rect key="frame" x="0.0" y="44" width="375" height="734"/>
                             </imageView>
                             <visualEffectView opaque="NO" alpha="0.59999999999999998" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ejQ-od-pNH">
@@ -245,7 +189,7 @@
         </scene>
     </scenes>
     <resources>
-        <image name="animal-png-hd-for-kids-stickers-for-kids-jungle-animals-500" width="250" height="166.5"/>
+        <image name="animals" width="250" height="166.5"/>
         <image name="theatre-masks_318-1606.jpg" width="626" height="626"/>
     </resources>
 </document>
